add docs for Trino and roll back the refresh method for krb config